--- a/app/index.html
+++ b/app/index.html
@@ -157,11 +157,14 @@
       <h2 class="section-title section-title--blue"><img class="section-title__icon"
           src="assets/images/icons/comment.svg">Real <strong>Testimonials</strong></h2>
 
-      <div class="row row--gutters row--equal-height-at-large row--gutters-small row--t-padding generic-content-container">
+      <div
+        class="row row--gutters row--equal-height-at-large row--gutters-small row--t-padding generic-content-container">
         <div class="row__large-4 ">
           <div class="testimonial">
             <div class="testimonial__photo">
-              <img sizes="160px" srcset="assets/images/testimonial-jane.jpg 160w, assets/images/testimonial-jane-hi-dpi.jpg 320w" alt="Jane Doe">
+              <img sizes="160px"
+                srcset="assets/images/testimonial-jane.jpg 160w, assets/images/testimonial-jane-hi-dpi.jpg 320w"
+                alt="Jane Doe">
             </div>
 
             <h3 class="testimonial__title">Jane Doe</h3>
@@ -179,7 +182,9 @@
         <div class="row__large-4">
           <div class="testimonial">
             <div class="testimonial__photo">
-              <img sizes="160px" srcset="assets/images/testimonial-john.jpg 160w, assets/images/testimonial-john-hi-dpi.jpg 320w" alt="John Smith">
+              <img sizes="160px"
+                srcset="assets/images/testimonial-john.jpg 160w, assets/images/testimonial-john-hi-dpi.jpg 320w"
+                alt="John Smith">
             </div>
             <h3 class="testimonial__title">John Smith</h3>
             <h4 class="testimonial__subtitle">4 Time Escaper</h4>
@@ -194,7 +199,9 @@
         <div class="row__large-4">
           <div class="testimonial testimonial--last">
             <div class="testimonial__photo">
-              <img sizes="160px" srcset="assets/images/testimonial-cat.jpg 160w, assets/images/testimonial-cat-hi-dpi.jpg 320w" alt="Cat McKitty">
+              <img sizes="160px"
+                srcset="assets/images/testimonial-cat.jpg 160w, assets/images/testimonial-cat-hi-dpi.jpg 320w"
+                alt="Cat McKitty">
             </div>
             <h3 class="testimonial__title">Cat McKitty</h3>
             <h4 class="testimonial__subtitle">6 Time Escaper</h4>
@@ -207,15 +214,19 @@
         </div>
       </div>
     </div>
+  </div>
+  <footer class="site-footer">
+    <div class="wrapper">
+      <p><span class="site-footer__text"> Copyright &copy; 2023 Clear View Escapes. All rights reserved. </span>
+        <a href="#" class="btn btn--orange">Get in Touch</a>
+      </p>
     </div>
-    <footer>
-      <p>Copyright &copy; 2019 Clear View Escapes. All rights reserved. <a href="#" class="btn btn--orange">Get in
-          Touch</a></p>
-    </footer>
-    <script src="bundled.js">
 
-    </script>
-    <!-- Leave this commented out HTML here until you need it for an upcoming "modal" lesson
+  </footer>
+  <script src="bundled.js">
+
+  </script>
+  <!-- Leave this commented out HTML here until you need it for an upcoming "modal" lesson
   <div class="modal">
     <div class="modal__inner">
       <h2 class="section-title section-title--blue section-title--less-margin"><img src="assets/images/icons/mail.svg" class="section-title__icon"> Get in <strong>Touch</strong></h2>
