--- a/app/index.html
+++ b/app/index.html
@@ -12,20 +12,37 @@
 </head>
 
 <body>
-  <header>
-    <img src="assets/images/icons/clear-view-escapes.svg">
-    <a href="#" class="btn">Get in Touch</a>
-    <nav>
-      <ul>
-        <li><a href="#our-beginning">Our Beginning</a></li>
-        <li><a href="#features">Features</a></li>
-        <li><a href="#testimonials">Testimonials</a></li>
-      </ul>
-    </nav>
+  <header class="site-header">
+    <div class="wrapper">
+      <div class="site-header__logo">
+        <div class="site-header__logo__graphic icon icon--clear-view-escapes">
+          <img src="assets/images/icons/clear-view-escapes.svg">
+        </div>
+
+      </div>
+      <div class="site-header__menu-icon">
+        <div class="site-header__menu-icon__middle"> </div>
+      </div>
+
+      <div class="site-header__menu-content">
+        <div class="site-header__btn-container">
+          <a href="#" class="btn">Get in Touch</a>
+        </div>
+        <nav class="primary-nav primary-nav--pull-right">
+          <ul>
+            <li><a href="#our-beginning">Our Beginning</a></li>
+            <li><a href="#features">Features</a></li>
+            <li><a href="#testimonials">Testimonials</a></li>
+          </ul>
+        </nav>
+      </div>
+
+    </div>
+
   </header>
 
-  <div class="large-hero">
-    <picture>
+  <div class="large-hero large-hero__grid">
+    <picture class="large-hero__image">
       <source srcset="assets/images/hero--large.jpg 1920w, assets/images/hero--large-hi-dpi.jpg 3840w"
         media="(min-width: 1380px)">
       <source srcset="assets/images/hero--medium.jpg 1380w, assets/images/hero--medium-hi-dpi.jpg 2760w"
@@ -33,16 +50,21 @@
       <source srcset="assets/images/hero--small.jpg 990w, assets/images/hero--small-hi-dpi.jpg 1980w"
         media="(min-width: 640px)">
       <img srcset="assets/images/hero--smaller.jpg 640w,  assets/images/hero-smaller-hi-dpi.jpg 1280w"
-        alt="Coastal view of ocean and mountains" class="large-hero__image">
+        alt="Coastal view of ocean and mountains">
     </picture>
     <div class="large-hero__text-content">
       <div class="wrapper">
+
         <h1 class="large-hero__title">Your clarity!</h1>
         <h2 class="large-hero__subtitle">One trip away.</h2>
         <p class="large-hero__description">We create soul restoring journeys that inspire you to be you.</p>
         <p><a href="#" class="btn btn--orange btn--large">Get Started Today</a></p>
+
+
       </div>
     </div>
+
+  </div>
   </div>
 
   <div id="our-beginning" class="page-section">
