--- a/app/index.html
+++ b/app/index.html
@@ -30,9 +30,9 @@
         </div>
         <nav class="primary-nav primary-nav--pull-right">
           <ul>
-            <li><a href="#our-beginning" id="our-beginning-link">Our Beginning</a></li>
-            <li><a href="#features" id="features-link">Features</a></li>
-            <li><a href="#testimonials" id="testimonials-link">Testimonials</a></li>
+            <li class="our-beginning"><a href="#our-beginning" class=" " id="our-beginning-link">Our Beginning</a></li>
+            <li class="features"><a href="#features" id="features-link">Features</a></li>
+            <li class="testimonials"><a href="#testimonials" id="testimonials-link">Testimonials</a></li>
           </ul>
         </nav>
       </div>
