--- a/app/index.html
+++ b/app/index.html
@@ -184,7 +184,7 @@
         <div class="row__large-4 ">
           <div class="testimonial">
             <div class="testimonial__photo">
-              <img sizes="160px"
+              <img loading='lazy' sizes="160px"
                 srcset="assets/images/testimonial-jane.jpg 160w, assets/images/testimonial-jane-hi-dpi.jpg 320w"
                 alt="Jane Doe">
             </div>
@@ -204,7 +204,7 @@
         <div class="row__large-4">
           <div class="testimonial">
             <div class="testimonial__photo">
-              <img sizes="160px"
+              <img  loading='lazy' sizes="160px"
                 srcset="assets/images/testimonial-john.jpg 160w, assets/images/testimonial-john-hi-dpi.jpg 320w"
                 alt="John Smith">
             </div>
@@ -221,7 +221,7 @@
         <div class="row__large-4">
           <div class="testimonial testimonial--last">
             <div class="testimonial__photo">
-              <img sizes="160px"
+              <img  loading='lazy' sizes="160px"
                 srcset="assets/images/testimonial-cat.jpg 160w, assets/images/testimonial-cat-hi-dpi.jpg 320w"
                 alt="Cat McKitty">
             </div>
