--- a/app/index.html
+++ b/app/index.html
@@ -1,3 +1,6 @@
+<?php 
+template: test 
+?> 
 <!DOCTYPE html>
 <html>
 <!--192.168.150.1:3000-->
@@ -33,6 +36,7 @@
             <li class="our-beginning"><a href="#our-beginning" class=" " id="our-beginning-link">Our Beginning</a></li>
             <li class="features"><a href="#features" id="features-link">Features</a></li>
             <li class="testimonials"><a href="#testimonials" id="testimonials-link">Testimonials</a></li>
+            <li class="test"><a href="./test.php" id="php-link">Php Link</a></li>
           </ul>
         </nav>
       </div>
